# fastAPI-Tasks-Manager

./: .env  alembic.ini  pyproject.toml
migrations/: env.py
migrations/versions/: 015f3bd4b4f4_init_db.py
src/tasks_manager_api/: initial_data.py  main.py  models.py
src/tasks_manager_api/core/: config.py  db.py  security.py
src/tasks_manager_api/models/: __init__.py  task.py  user.py
src/tasks_manager_api/schemas/: task.py  user.py
